# algebra

./: CMakeLists.txt  README.md  codegen_test.zsh  run.bat  run_codegen_test.bat  run_compiler_test.bat  run_integrate_test.bat  run_lit_test.bat  run_sketchCodegen.bat  run_test_core.bat  run_unit_test.bat  unit_test.zsh
backup/codegen/: codeWriter.h  cppWriter.h
backup/codegen/codegen/: cppWriter.cpp
backup/codegen/sketch/: symbolTable.h
cmake/: MLIRUtils.cmake  MLIRloader.cmake  builder.cmake
compiler/: CMakeLists.txt
compiler/IR/: CMakeLists.txt
compiler/IR/cmake/: tblgen.cmake
compiler/cmake/: tblgen.cmake
compiler/include/: CMakeLists.txt
compiler/include/dialect/: CMakeLists.txt
compiler/include/frame/: config.h  edsl.h  frame.h  init.h  init.hpp  symbolTable.h  variable.h
compiler/opt/: CMakeLists.txt  mc-opt.cpp
compiler/opt/lit/: AA_canonicalizer.mlir
compiler/src/: CMakeLists.txt
compiler/src/frame/: CMakeLists.txt  edsl.cpp  init.cpp
core/include/: aog.h  dgraph.h  encoder.h  global.h  interfaces.h  logger.h  opInterface.h  operation.h  ops.h  passes.h  printer.h  sdgraph.h  trait.h  tree.h  utility.h
core/src/: CMakeLists.txt  aog.cpp  dgraph.cpp  operation.cpp  passes.cpp  utility.cpp
doc/: codegen.md  misc.md
lgf/: CMakeLists.txt
lgf/include/aab/: groups.h  ops.h  passes.h
lgf/include/aoc/: app.h  convention.h  exception.h  object.h  stream.h  utils.h
lgf/include/ast/: ast.h  context.h  generator.h  lexer.h  parser.h  stream.h
lgf/include/codegen/: ast.h  codeWriter.h  codegen.h  cppWriter.h  generator.h  modules.h  nodeGenerator.h  parser.h  sketchAST.h  sketchLexer.h  sketchParser.h  sketchWriter.h  stream.h  uid.h  writer.h
lgf/include/compiler/: ASTContext.h  LGTranslator.h  ast.h  compiler.h  context.h  fileIO.h  lexer.h  (+4 more)
lgf/src/: CMakeLists.txt
test/: CMakeLists.txt
test/codegen/: CMakeLists.txt  main.cpp  test.input
test/compiler/: test.lgf
test/include/: unit_test_frame.h
test/integrate_tests/: CMakeLists.txt  main.cpp  test_compile.h  test_pass.h  unit_test_frame.h
test/poc/: CMakeLists.txt  main.cpp
test/test_compiler/: CMakeLists.txt  main.cpp
test/test_core/: CMakeLists.txt  main.cpp
test/unit_tests/: CMakeLists.txt  main.cpp  test_ast.h  test_codegen.h  test_dgraph.h  test_graph.h  test_operation.h  test_pass.h  unit_test_frame.h
(+254 files in other folders)
